<?xml version="1.0"?>
<package format="3">
  <name>aig</name>
  <version>1.1.0</version>
  <description>
    Analytical inverse geometry for 6 links kinematic chains
  </description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem saurel</maintainer>
  <license>BSD</license>

  <url>https://github.com/Gepetto/aig</url>
  <author>Nahuel Villa</author>
  <author>Maximilien Naveau</author>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <depend>eigen</depend>
  <depend>boost</depend>
  <depend>pinocchio</depend>
  <depend>eiquadprog</depend>
  <test_depend>example-robot-data</test_depend>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
